<resources>
    <string name="app_name">QuwiTestApp</string>

    <!-- LoginActivity -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_validation_error">Enter valid email</string>
    <string name="password_validation_error">Enter password</string>

    <!-- Projects Activity-->
    <string name="no_projects">No Projects</string>

    <!-- Tickets Activity-->
    <string name="ticket_created_by">%1$s by %2$s</string>
    <string name="no_tickets">No Tickets</string>
    <string name="tickets">Tickets</string>
    <string name="edit_project_name">Edit project name</string>

    <!-- EditProjectNameDialog-->

    <string name="project_name_changed">Project name successfully changed</string>
    <string name="value_empty">Value is empty</string>
    <string name="project_name_not_changed">Project name was not changed</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
</resources>