<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:text="@string/edit_project_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginTop="8dp"
            android:inputType="text"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/btn_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_name"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:text="@string/change" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_name"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/btn_change"
            android:text="@string/cancel" />
    </RelativeLayout>


</layout>